add footer section with attribution in index.html and style adjustments in style.css

--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
     </div>
 
     <script src="index.js"></script>
+    <footer class="footer">
+        <p>Made with ❤️ by Arup Kumar Das </p>
+    </footer>
 </body>
 
 </html>
